--- a/DB-Project/templates/index.html
+++ b/DB-Project/templates/index.html
@@ -14,8 +14,8 @@
     <br><br>
 
     <a href="/new-problem"> <Button >New Problem</Button> </a>
-
-
+    <br><br>
+    <a href="/search-problem"> <Button >Search Problem</Button> </a>
 
 </body>
 </html>
