search is now ok

--- a/DB-Project/templates/search-after-login.html
+++ b/DB-Project/templates/search-after-login.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>search problem</title>
+    <title>Title</title>
 </head>
 <body>
     <form action="/search-problem-submit">
+
+
+        Hello {{ username }}
+
+        <br><br>
 
         Search:<br>
         <input type="text" name="search">
@@ -16,5 +21,9 @@
 
 
     </form>
+    <br><br>
+    <a href="/new-problem"> <Button >New Problem</Button> </a>
+
+
 </body>
 </html>
