add creator to answers
add id to problems
complete show problems function

show a single problem with answers
now can add answer to problem
add delete problem function

--- a/DB-Project/templates/search-problem.html
+++ b/DB-Project/templates/search-problem.html
@@ -14,6 +14,28 @@
         <br><br>
           <input type="submit" value="Submit">
 
+{#        <p id="demo"></p>#}
+
+{#        <script>#}
+{#            console.log({{ result }})#}
+{#            text=""#}
+{#            for (item in ) {#}
+{#                text = text + "<br><br>" + "<a href=/" + "full-problem/" + item + ">" + {{ result }} + "</a>";#}
+{#            }#}
+{##}
+{#            document.getElementById("demo").innerHTML = text;#}
+{##}
+{#         </script>#}
+
+
+
+{#        <script>i=0</script>#}
+{#        {% for item in result %}#}
+{#            <script>i=i+1</script>#}
+{#            <br><br>#}
+{#            <a href="full-problem/" + i> {{ item.problem }} </a>#}
+{##}
+{#        {% endfor %}#}
 
     </form>
 </body>
