related question added

--- a/DB-Project/templates/new-problem.html
+++ b/DB-Project/templates/new-problem.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form action="/new-problem-submit">
+<form action="/new-problem-search">
 
     Problem: <br>
     <textarea rows="5" cols="50" name="problem"></textarea>
