some little change, just for beauty

--- a/DB-Project/templates/login.html
+++ b/DB-Project/templates/login.html
@@ -8,6 +8,10 @@
 
 <form action="/login-submit">
 
+    {{ message }}
+
+    <br><br>
+
     Username:<br>
     <input type="text" name="username">
     <br>
