--- a/DB-Project/templates/search-after-login.html
+++ b/DB-Project/templates/search-after-login.html
@@ -15,15 +15,14 @@
         Search:<br>
         <input type="text" name="search">
         <br>
-
-        <br><br>
           <input type="submit" value="Submit">
-
+        <br><br>
 
     </form>
     <br><br>
     <a href="/new-problem"> <Button >New Problem</Button> </a>
-
+    <br><br>
+    <a href="/all-problem"> <Button >All problems</Button> </a>
 
 </body>
 </html>
